Center attributes table

--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -93,3 +93,12 @@ body {
   height: 180px;
   display: flex;
 }
+
+.div__attributes {
+  margin: auto;
+  padding-right: 60px;
+}
+
+.table__attributes {
+  margin: auto;
+}
